test_regress/t/t_alias_hier_ref_bad.out
%Error: t/t_alias_hier_ref_bad.v:18:19: Hierarchical reference used for net alias (IEEE 1800-2023 10.11)
                                      : ... note: In instance 't'
   18 |   alias a = sub_i.btw;
      |                   ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
